new resume link

--- a/bmats.co/www/index.html
+++ b/bmats.co/www/index.html
@@ -18,7 +18,7 @@
             <h2><a href="http://bmatsuo.github.io">blog</a></h2>
         </div>
         <div class="row text-center">
-            <h2><a href="resume.xml" title="Browser XSLT support required">resume</a></h2>
+            <h2><a href="http://bmatsuo.github.io/resume/">resume</a></h2>
         </div>
     </div>
     <script src="//code.jquery.com/jquery.js"></script>
